# gps

./: .gitignore
experiments/baxter_experiment/: hyperparams.py  hyperparams.py~  target.npz
experiments/pr2_badmm_example/: target.npz
python/gps/: gps_main.py
python/gps/agent/: config.py
python/gps/agent/ros/: agent_ros.py  ros_utils.py
python/gps/algorithm/cost/: config.py  cost_rotation.py
python/gps/algorithm/policy_opt/: policy_opt_caffe.py
src/gps_agent_pkg/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  controller_baxter_plugins.xml  manifest.xml  package.xml  run_tmux  setup_custom_pythonpath.sh
src/gps_agent_pkg/cfg/: JointVelocityPID.cfg  JointVelocityPID.cfgc
src/gps_agent_pkg/cmake/: gps_agent_pkg-genmsg-context.py  gps_agent_pkg-genmsg.cmake
src/gps_agent_pkg/gtest/: CTestTestfile.cmake
src/gps_agent_pkg/include/gps_agent_pkg/: encodersensor.h  positioncontroller.h
src/gps_agent_pkg/include/gps_agent_pkg/baxter_control/: arm_hardware_interface.h  arm_interface.h  arm_simulator_interface.h  baxter_hardware_interface.h  baxter_move_group_interface.h  baxter_to_csv.h  baxter_utilities.h  baxterplugin.h  chain.h
src/gps_agent_pkg/launch/: baxter_gazebo.launch  baxter_gazebo_no_controller.launch  baxter_gazebo_only_controller.launch  baxter_left_controller.yaml  baxter_only_controller.launch  baxter_only_controller.launch~  baxter_real.launch  baxter_sdk_control.launch  baxter_world.launch  pr2_gazebo_no_controller.launch
src/gps_agent_pkg/msg/: TrialCommand.msg
src/gps_agent_pkg/src/: encodersensor.cpp  positioncontroller.cpp  robotplugin.cpp
src/gps_agent_pkg/src/baxter_control/: arm_hardware_interface.cpp  arm_simulator_interface.cpp  baxter_assembly_state.cpp  baxter_hardware_interface.cpp  baxter_to_csv.cpp  baxter_utilities.cpp  baxterplugin.cpp  chain.cpp
src/proto/: gps.proto
