<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>gps_agent_pkg</name>
  <version>1.0.0</version>
  <description > gps_agent_pkg </description>
  <maintainer email="whying1990@gmail.com">Brook</maintainer>
  <author>Brook</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> std_msgs</build_depend>
  <build_depend> sensor_msgs</build_depend>
  <build_depend> pr2_controller_interface</build_depend>
  <build_depend> pr2_mechanism_model</build_depend>
  <build_depend> pluginlib</build_depend>
  <build_depend> roscpp</build_depend>
  <build_depend> roslib</build_depend>
  <build_depend> rospy</build_depend>
  <build_depend> pr2_controllers_msgs</build_depend>
  <build_depend> control_toolbox</build_depend>
  <build_depend> realtime_tools</build_depend>
  <build_depend> orocos_kdl</build_depend>
  <build_depend> geometry_msgs</build_depend>
  <build_depend> tf</build_depend>
  <build_depend> pr2_controller_manager</build_depend>
  <build_depend> controller_interface</build_depend>
  <build_depend> controller_manager</build_depend>
  <build_depend> hardware_interface</build_depend>
  <build_depend> transmission_interface</build_depend>
  <build_depend> moveit_visual_tools</build_depend>
  <build_depend> moveit_ros_planning_interface</build_depend>
  <build_depend> moveit_msgs</build_depend>
  <build_depend> trajectory_msgs</build_depend>
  <build_depend> baxter_core_msgs</build_depend>
  <build_depend> joint_limits_interface</build_depend>
  <build_depend> dynamic_reconfigure</build_depend>
  <build_depend> driver_base</build_depend>
  <build_depend> cmake_modules</build_depend>
  <build_depend> message_generation</build_depend>


  <run_depend> std_msgs</run_depend>
  <run_depend> sensor_msgs</run_depend>
  <run_depend> pr2_controller_interface</run_depend>
  <run_depend> pr2_mechanism_model</run_depend>
  <run_depend> pluginlib</run_depend>
  <run_depend> roscpp</run_depend>
  <run_depend> roslib</run_depend>
  <run_depend> rospy</run_depend>
  <run_depend> pr2_controllers_msgs</run_depend>
  <run_depend> control_toolbox</run_depend>
  <run_depend> realtime_tools</run_depend>
  <run_depend> orocos_kdl</run_depend>
  <run_depend> geometry_msgs</run_depend>
  <run_depend> tf</run_depend>
  <run_depend> pr2_controller_manager</run_depend>
  <run_depend> controller_interface</run_depend>
  <run_depend> controller_manager</run_depend>
  <run_depend> hardware_interface</run_depend>
  <run_depend> transmission_interface</run_depend>
  <run_depend> moveit_visual_tools</run_depend>
  <run_depend> moveit_ros_planning_interface</run_depend>
  <run_depend> moveit_msgs</run_depend>
  <run_depend> trajectory_msgs</run_depend>
  <run_depend> baxter_core_msgs</run_depend>
  <run_depend> joint_limits_interface</run_depend>
  <run_depend> dynamic_reconfigure</run_depend>
  <run_depend> driver_base</run_depend>
  <run_depend> cmake_modules</run_depend>
  <run_depend> message_runtime</run_depend>


  <export>
    <!-- <pr2_controller_interface plugin="${prefix}/controller_pr2_plugins.xml" /> -->
    <controller_interface plugin="${prefix}/controller_baxter_plugins.xml" />
  </export>
</package>


